# audio-transcription

./: .gitattributes  .gitignore  ACCESSIBLE_TEXT_FOR_TTS.txt  Cargo.toml  DELAY_ANALYSIS_GUIDE.txt  DELAY_FIXED_TEXT.txt  DELAY_FREE_TEXT_FINAL.txt  EXACT_TTS_INPUT.txt  LISTENING_GUIDE.md  PROJECT_STRUCTURE.md  README.md  analyze_delay_problem.py  analyze_first_paragraph.py  basic_gap_analysis.py  cleanup_project.py  create_all_language_pages.py  create_language_template.py  create_premium_edge_audio.py  debug_tts_input.py  deep_line_ending_analysis.py  edge_premium_text.txt  espeak_natural_text.txt  ethical_news_digest.py  first_paragraph_text.txt  fix_swedish_officials.py  generate_html.py  github_ai_news_digest.py  guardian_top_1_I_am_the_only_one_that_matters_Trump_deals_praise_.txt  guardian_top_2_Unknown_Title.txt  guardian_top_3_Red_Cross_receives_bodies_of_four_more_Israeli_hos.txt  lighthouse-report.report.html  news_digest_ai_2025_10_15.txt  professional_audio_analysis.py  regional_implementation_strategy.md  regional_localization_plan.md  requirements.txt  simple_first_paragraph.py  simple_professional_analysis.py  test_audionews_email.py  ultra_clean_first_paragraph.txt  (+2 more)
archive/: generate_top_guardian_audio.py  lighthouse-improved  lighthouse-report.report.json
archive_20251014_215337/: FINAL_TEXT_FOR_TTS.txt  PROJECT_SUMMARY.md  audio_engineer_analysis.py  check_quality.py  create_audio_now.py  create_extreme_audio.py  create_final_optimized.py  create_improved_audio.py  create_natural_flow.py  create_pause_free.py  create_perfect_audio.py  debug_pauses.py  (+19 more)
(+110 files in other folders)
