[package]
name = "audio-transcription"
version = "0.1.0"
edition = "2021"
description = "High-quality audio transcription tool for accessibility - converts web articles to natural-sounding Irish female voice"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
url = "2.4"
regex = "1.10"
html2text = "0.6"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
html-escape = "0.2"
env_logger = "0.10"

# Audio processing (for future enhancements)
# rodio = "0.17"
# hound = "3.5"

[features]
default = []

[[bin]]
name = "audio-transcription"
path = "src/main.rs"

[[bin]]
name = "test-extraction"
path = "src/test_extraction.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"
